<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <POU Name="PRG_VAC_INTF" Id="{53a728aa-6dbf-4df3-9e27-18c0d8781c72}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_VAC_INTF
(*
This PRG governs the interfaces between the SXR Vacuum system and external systems.
This includes AD's vacuum system, EM1K0-GMD, AT1K0-GAS, EM2K0-XGMD, the TMO beamline vacuum system, and the RIX Beamline Vacuum System.
The Vacuum system for TXI is planned but not yet implemented. When implemented it should go here.
*)
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[// Interface to AD's vacuum system

fb_TV1K0_INTF_GCC_1(rTREATY_SIGNAL_PRESS := 5E-6, rNO_SIGNAL_PRESS := 760);
fb_RTDSK0_INTF_VGC_1(TREATY_VGC := fb_RTDSK0_VGC_1.iq_stValve);


// Update interlock signals for TMO
st_TMO_ILK_Upper.rPRO_SP 	:=	1E-4; // Fix the agreed-upon values
fb_TMO_ILK_Uppper(
    VG	:=	fb_MR1K4_SOMS_GCC_1.IG,
    ILK	:=	st_TMO_ILK_Upper
);
st_TMO_ILK_Lower.rPRO_SP	:=	1E-7; // Fix the agreed-upon values
fb_TMO_ILK_Lower(
    VG	:=	fb_MR1K4_SOMS_GCC_1.IG,
    ILK	:=	st_TMO_ILK_Lower
);


// Interface to RIX's vacuum system

fb_PC1K1_INTF_GCC_1(rTREATY_SIGNAL_PRESS := 5E-6, rNO_SIGNAL_PRESS := 760);

// Interface to TXI's K3 vacuum system

fb_PC1K3_INTF_PIP_1(rTREATY_SIGNAL_PRESS := 5E-6, rNO_SIGNAL_PRESS := 760);


// EM1K0-GMD Vacuum Interface

fb_EM1K0_GMD_GCC_10_reader(
    sNetId      :=  '172.21.92.59.1.1',
    nPort       :=  851,
    sVarName    :=  'GVL_GMD.fb_EM1K0_GMD_GCC_10',
    iWatchdog   :=  n_EM1K0_VAC_counter
);

fb_EM1K0_GMD_GCC_70_reader(
    sNetId      :=  '172.21.92.59.1.1',
    nPort       :=  851,
    sVarName    :=  'GVL_GMD.fb_EM1K0_GMD_GCC_70',
    iWatchdog   :=  n_EM1K0_VAC_counter
);


// AT1K0-GAS Vacuum Interface

fb_AT1K0_GAS_GCC_10_reader(
    sNetId      :=  '172.21.92.57.1.1',
    nPort       :=  851,
    sVarName    :=  'GVL_Devices.fb_AT1K0_GAS_GCC_10',
    iWatchdog   :=  n_AT1K0_VAC_counter
);

fb_AT1K0_GAS_GCC_140_reader(
    sNetId      :=  '172.21.92.57.1.1',
    nPort       :=  851,
    sVarName    :=  'GVL_Devices.fb_AT1K0_GAS_GCC_140',
    iWatchdog   :=  n_AT1K0_VAC_counter
);


// EM2K0-XGMD Vacuum Interface

fb_EM2K0_XGMD_GCC_10_reader(
    sNetId      :=  '172.21.92.60.1.1',
    nPort       :=  851,
    sVarName    :=  'GVL_GMD.fb_EM2K0_XGMD_GCC_10',
    iWatchdog   :=  n_EM2K0_VAC_counter
);

fb_EM2K0_XGMD_GCC_90_reader(
    sNetId      :=  '172.21.92.60.1.1',
    nPort       :=  851,
    sVarName    :=  'GVL_GMD.fb_EM2K0_XGMD_GCC_90',
    iWatchdog   :=  n_EM2K0_VAC_counter
);

]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>